can-socket/tests/compile-fail/id_negative3.rs
fn main() {
	let _id = can_socket::can_id!(extended: -2);
}
